app/assets/stylesheets/discover/discover.scss
.discover-container {
  margin-top: 50px;

  .discover-banner {
    background-image: image_url("discover/discover_banner1.jpg");
    width: 100%;
    height: 600px;
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;

    p {
      font-size: 48px;
      color: white;
      text-shadow: 1px 1px 10px black;
    }
  }

  .discover-photo-header {
    display: flex;
    justify-content: center;
    margin-top: 50px;
    margin-bottom: 30px;

    p {
      font-size: 20px;
      color: #525558;
    }
  }
}

.discover-photos {
  margin: 1em auto;
  width: 96%;
  display: grid;
  grid-auto-rows: 200px;
  grid-gap: 10px;

  * {
    width: 100%;
  }

  img {
    height: 100%;
    width: 100%;
    display: inline-block;
    overflow: hidden;
    object-fit: cover;
    margin-bottom: 0;
  }
}

@media (min-width: 400px) {
  .discover-photos {
    grid-template-columns: 1fr;
    grid-auto-rows: 288px;
  }
}

@media (min-width: 700px) {
  .discover-photos {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width: 1200px) {
  .discover-photos {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (min-width: 1500px) {
  .discover-photos {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media (min-width: 1800px) {
  .discover-photos {
    grid-template-columns: repeat(5, 1fr);
  }
}

